# avd

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  deny.toml  mkdocs.yml  pylintrc  pyproject.toml  sonar-project.properties
.github/: DockerfileBase  DockerfileBuild  generate_release.py  ignore-codespell-words  ignore-codespell-words.md  molecule-runner.sh  release.yml  requirements-ci-dev.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build_base_on_forks.yml  container_build_base.yml  container_build_dev.yml  container_build_template.yml  container_build_universal.yml  new-cvp-integration.yml  offline-links-check.yml  pull-request-conflict.yml  pull-request-management.yml  pull-request-rn-labeler.yml  pull-request-triage.yml  rust.yml  sonar.yml  stale.yml
ansible_collections/arista/avd/: .ansible-lint  .coverage  .coveragerc  CHANGELOG.rst  README.md  galaxy.yml  pylintrc  pytest.ini  requirements-dev.txt  requirements.txt  requirements.yml
ansible_collections/arista/avd/changelogs/: .plugin-cache.yaml  changelog.yaml
ansible_collections/arista/avd/meta/: execution-environment.yml
ansible_collections/arista/avd/molecule/: MOLECULE_SCENARIOS.txt
ansible_collections/arista/avd/plugins/: __init__.py
containers/base/.devcontainer/: Dockerfile  devcontainer.json
containers/dev/.devcontainer/: Dockerfile  devcontainer.json
containers/universal/.devcontainer/: Dockerfile  devcontainer.json
docs/: requirements.txt
docs/concepts/node_type/: readme.md
docs/contribution/: eos_designs_internal_notes.md
docs/contribution/eos_designs_facts_internal/tables/: eos_designs_facts.md  node-type-uplink-configuration.md
docs/how-to/node_types/: create_custom_node_types.md
docs/plugins/Modules_and_action_plugins/: anta_workflow.md  cv_workflow.md  eos_designs_facts.md
docs/pyavd/: pyavd.md
docs/release-notes/: 5.x.x.md
docs/stylesheets/: extra.material.css
docs/support/: support_overview.md
docs/versioning/: semantic-versioning.md
python-avd/: .gitignore  Makefile  pyproject.toml  tox.ini
python-avd/avdutils/: MANIFEST.in  pyproject.toml
python-avd/avdutils/avdutils/: __init__.py
python-avd/pyavd/: __init__.py  avd_schema_tools.py  get_avd_facts.py  get_device_anta_catalog.py  get_device_structured_config.py  get_device_test_catalog.py  get_fabric_documentation.py  templater.py
python-avd/pyavd/_anta/: __init__.py  constants.py  factories.py  index.py  logs.py  models.py  utils.py
python-avd/pyavd/_anta/input_factories/: __init__.py  _base_classes.py  avt.py  connectivity.py  interfaces.py  mlag.py  routing_bgp.py  security.py  stun.py
python-avd/pyavd/_anta/lib/: __init__.py
python-avd/pyavd/_cv/client/: __init__.py  exceptions.py
python-avd/pyavd/_cv/workflows/: deploy_cv_pathfinder_metadata_to_cv.py  deploy_tags_to_cv.py  deploy_to_cv.py  finalize_workspace_on_cv.py  models.py  verify_devices_on_cv.py  verify_inputs.py
python-avd/pyavd/_eos_cli_config_gen/j2templates/: eos-device-documentation.j2  eos-intended-config.j2
python-avd/pyavd/_eos_cli_config_gen/schema/: __init__.py  eos_cli_config_gen.schema.yml
python-avd/pyavd/_eos_designs/: avdfacts.py
python-avd/pyavd/_eos_designs/eos_designs_facts/: README.md  __init__.py  facts_generator.py  get_facts.py  mlag.py  overlay.py  short_esi.py  uplinks.py  utils.py  vlans.py  wan.py
python-avd/pyavd/_eos_designs/fabric_documentation_facts/: __init__.py
python-avd/pyavd/_eos_designs/schema/: __init__.py  eos_designs.schema.yml
python-avd/pyavd/_eos_designs/shared_utils/: __init__.py  filtered_tenants.py  flow_tracking.py  inband_management.py  l3_interfaces.py  link_tracking_groups.py  misc.py  mlag.py  node_type.py  node_type_keys.py  overlay.py  ptp.py  routing.py  underlay.py  utils.py  wan.py
python-avd/pyavd/_eos_designs/structured_config/: __init__.py  structured_config_generator.py
python-avd/pyavd/_errors/: __init__.py
python-avd/pyavd/_schema/: avd_meta_schema.json  avdschema.py  coerce_type.py  constants.py  init_store.py
python-avd/pyavd/_schema/models/: avd_base.py  avd_indexed_list.py  avd_list.py  avd_model.py  eos_cli_config_gen_root_model.py  eos_designs_root_model.py  input_path.py
python-avd/pyavd/_utils/: __init__.py  remove_cached_property_type.py
python-avd/pyavd/api/_anta/: __init__.py  avd_catalog_generation_settings.py  minimal_structured_config.py  (+1 more)
python-avd/pyavd/j2filters/: __init__.py  add_md_toc.py  secure_hash.py
python-avd/pyavd/j2tests/: contains.py  defined.py
python-avd/schema_tools/: avdschemaresolver.py  build_schemas.py  check_schemas.py  constants.py  store.py
python-avd/schema_tools/generate_classes/: class_src_gen.py  src_generators.py
python-avd/schema_tools/metaschema/: meta_schema_model.py  resolvemodel.py
python-avd/tests/: models.py
python/avdutils/: coverage.xml  pyproject.toml  tox.ini
python/avdutils/src/: __init__.pyi  _validation.pyi
python/avdutils/tests/validation/: test_validate_json.py
rust/: .gitignore  README.md
rust/avdschema/: .gitignore  Cargo.toml
rust/avdschema/src/: errors.rs  inherit.rs  lib.rs  store.rs
rust/avdschema/src/resolve/: errors.rs  mod.rs  resolve_ref.rs  walker.rs
rust/avdschema/src/schema/: any.rs  boolean.rs  dict.rs  int.rs  list.rs  mod.rs  str.rs
rust/avdschema/src/schema/base/: convert_types.rs  documentation_options.rs  mod.rs  valid_values.rs
rust/avdschema/src/utils/: dump.rs  load.rs  mod.rs  test_utils.rs
rust/avdschema_macros/: Cargo.toml
rust/avdschema_macros/src/: lib.rs
rust/included_store/: Cargo.toml
rust/included_store/src/: lib.rs
rust/validation/: Cargo.toml
rust/validation/src/: coercion.rs  context.rs  feedback.rs  lib.rs  python_bindings.rs  validation_result.rs
rust/validation/src/utils/: dynamic_keys.rs  mod.rs  walker.rs
rust/validation/src/validation/: any.rs  boolean.rs  dict.rs  int.rs  list.rs  mod.rs  store.rs  str.rs  test_utils.rs  valid_values.rs
(+1928 files in other folders)
