[package]
name = "avdschema"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
lazy_static = "1.5.0"
ordermap = { version = "0.5.4", features = ["serde"] }
regex = { version = "1.11.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
serde_with = { version = "3.12.0" }
serde_yaml = { version = "0.9.33" }
strum_macros = "0.26.4"
walkdir = "2.5.0"
xz2 = "0.1.7"

[features]
include-schemas = []
